update the file's user_id colunm

--- a/nb/playsense-id.ipynb
+++ b/nb/playsense-id.ipynb
@@ -2393,6 +2393,42 @@
    "source": [
     "train_and_evaluate_one_user(crs_df.copy())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = \"../data/\"\n",
+    "user2_csv=\"controller_data_user1_20250310_100504_u2.csv\"\n",
+    "user3_csv=\"controller_data_user1_20250310_100733_u3.csv\"\n",
+    "user4_csv=\"controller_data_user1_20250310_101102_u4.csv\"\n",
+    "\n",
+    "# in all the csv file , replace the user_id to the user2 or user3 or user4 in the file name \n",
+    "def replace_user_id(csv_file, new_user_id):\n",
+    "    with open(csv_file, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "    with open(csv_file, 'w') as file:\n",
+    "        for line in lines:\n",
+    "            if \"user1\" in line:   \n",
+    "                line = line.replace(\"user1\", new_user_id)\n",
+    "            file.write(line)\n",
+    "\n",
+    "replace_user_id(folder_path+user2_csv, \"user2\")\n",
+    "replace_user_id(folder_path+user3_csv, \"user3\")\n",
+    "replace_user_id(folder_path+user4_csv, \"user4\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -2411,7 +2447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
