--- a/nb/playsense-id-fuse.ipynb
+++ b/nb/playsense-id-fuse.ipynb
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,6 +1465,7 @@
     "        )\n",
     "\n",
     "        return train_loader, val_loader\n",
+    "    \n",
     "class PlaySenseDataset(Dataset):\n",
     "    \"\"\"PyTorch Dataset for PlaySense data\"\"\"\n",
     "    def __init__(self, data_dict: Dict):\n",
@@ -1475,6 +1476,15 @@
     "        # Print initial data statistics\n",
     "        print(\"\\nInitializing Dataset:\")\n",
     "        print(f\"Number of users: {len(data_dict)}\")\n",
+    "        \n",
+    "        # Create label mapping (user_id -> consecutive index)\n",
+    "        unique_user_ids = sorted(list(data_dict.keys()))\n",
+    "        self.label_mapping = {user_id: idx for idx, user_id in enumerate(unique_user_ids)}\n",
+    "        self.inverse_mapping = {idx: user_id for user_id, idx in self.label_mapping.items()}\n",
+    "        \n",
+    "        print(\"\\nLabel mapping (user_id -> model_label):\")\n",
+    "        for user_id, idx in self.label_mapping.items():\n",
+    "            print(f\"User {user_id} -> Label {idx}\")\n",
     "        \n",
     "        # Track samples statistics\n",
     "        samples_stats = {user_id: {'kept': 0, 'discarded': 0} for user_id in data_dict.keys()}\n",
@@ -1508,7 +1518,8 @@
     "                    \n",
     "                    self.inertial_features.append(inertial)\n",
     "                    self.mfcc_features.append(mfcc)\n",
-    "                    self.labels.append(user_id)\n",
+    "                    # Map user_id to consecutive index\n",
+    "                    self.labels.append(self.label_mapping[user_id])\n",
     "                    samples_stats[user_id]['kept'] += 1\n",
     "                    \n",
     "                except KeyError as e:\n",
@@ -1521,7 +1532,7 @@
     "        print(\"-------------------\")\n",
     "        for user_id in samples_stats:\n",
     "            stats = samples_stats[user_id]\n",
-    "            print(f\"\\nUser {user_id}:\")\n",
+    "            print(f\"\\nUser {user_id} (Label {self.label_mapping[user_id]}):\")\n",
     "            print(f\"  Kept samples: {stats['kept']}\")\n",
     "            print(f\"  Discarded samples: {stats['discarded']}\")\n",
     "            if discarded_groups[user_id]:\n",
@@ -1541,10 +1552,17 @@
     "                class_dist = Counter(self.labels.numpy())\n",
     "                print(\"\\nClass distribution:\")\n",
     "                for label, count in sorted(class_dist.items()):\n",
-    "                    print(f\"User {label}: {count} samples\")\n",
+    "                    original_id = self.inverse_mapping[label]\n",
+    "                    print(f\"User {original_id} (Label {label}): {count} samples\")\n",
     "                print(f\"\\nFeature shapes:\")\n",
     "                print(f\"Inertial features: {self.inertial_features.shape}\")\n",
     "                print(f\"MFCC features: {self.mfcc_features.shape}\")\n",
+    "                \n",
+    "                # Verify label range\n",
+    "                min_label = self.labels.min().item()\n",
+    "                max_label = self.labels.max().item()\n",
+    "                num_classes = len(self.label_mapping)\n",
+    "                print(f\"\\nLabel range: [{min_label}, {max_label}] (Number of classes: {num_classes})\")\n",
     "                \n",
     "            except Exception as e:\n",
     "                print(f\"Error converting to tensors: {e}\")\n",
@@ -1560,7 +1578,11 @@
     "            'inertial': self.inertial_features[idx],\n",
     "            'mfcc': self.mfcc_features[idx],\n",
     "            'label': self.labels[idx]\n",
-    "        }"
+    "        }\n",
+    "    \n",
+    "    def get_num_classes(self):\n",
+    "        \"\"\"Return the number of classes in the dataset\"\"\"\n",
+    "        return len(self.label_mapping)"
    ]
   },
   {
@@ -1928,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3006,7 +3028,7 @@
     "model = InertialMFCCTransformer(\n",
     "    inertial_dim=12,     # Derivative features dimension\n",
     "    mfcc_dim=13,         # MFCC features dimension\n",
-    "    num_classes=3,       # 3 users (1, 3, 4)\n",
+    "    num_classes=data_manager.dataset.get_num_classes(),       # 3 users (1, 3, 4)\n",
     "    d_model=64,\n",
     "    nhead=4,\n",
     "    num_layers=2,\n",
