--- a/inves/inves.ipynb
+++ b/inves/inves.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,127 +18,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/4m/4mq00kz14230_q153p1_qdn80000gn/T/ipykernel_7231/2557854360.py:7: UserWarning: PySoundFile failed. Trying audioread instead.\n",
-      "  y, sr = librosa.load(audio)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import librosa\n",
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import os\n",
+    "import warnings\n",
     "\n",
-    "# Load the audio file\n",
-    "y, sr = librosa.load(audio)\n",
+    "# Filter out the specific warning\n",
+    "warnings.filterwarnings('ignore', message='PySoundFile failed. Trying audioread instead.')\n",
     "\n",
-    "# Create a figure with subplots\n",
-    "plt.figure(figsize=(15, 10))\n",
+    "def analyze_audio(audio_path):\n",
+    "    try:\n",
+    "        # Load the audio file with specific parameters\n",
+    "        print(f\"Loading audio file: {audio_path}\")\n",
+    "        # Using a lower sample rate (22050 Hz is librosa's default) and mono channel\n",
+    "        y, sr = librosa.load(audio_path, sr=22050, mono=True)\n",
+    "        \n",
+    "        print(f\"Audio loaded successfully - Sample rate: {sr}Hz, Duration: {len(y)/sr:.2f}s\")\n",
     "\n",
-    "# 1. Waveform plot\n",
-    "plt.subplot(7, 1, 1)  # Changed from 6,1,1 to 7,1,1 to accommodate new plot\n",
-    "librosa.display.waveshow(y, sr=sr)\n",
-    "plt.title('Waveform')\n",
-    "plt.xlabel('Time (s)')\n",
-    "plt.ylabel('Amplitude')\n",
+    "        # Create a figure with subplots\n",
+    "        plt.figure(figsize=(15, 10))\n",
     "\n",
-    "# 2. FFT plot\n",
-    "plt.subplot(7, 1, 2)  # Changed from 6,1,2 to 7,1,2\n",
-    "fft = np.fft.fft(y)\n",
-    "freq = np.fft.fftfreq(len(y), 1/sr)\n",
-    "plt.plot(freq[:len(freq)//2], np.abs(fft)[:len(freq)//2])\n",
-    "plt.title('FFT')\n",
-    "plt.xlabel('Frequency (Hz)')\n",
-    "plt.ylabel('Magnitude')\n",
-    "# Mark 12000 Hz\n",
-    "plt.axvline(x=12000, color='r', linestyle='--', label='12kHz')\n",
-    "plt.legend()\n",
+    "        # 1. Waveform plot\n",
+    "        plt.subplot(7, 1, 1)\n",
+    "        with warnings.catch_warnings():\n",
+    "            warnings.simplefilter(\"ignore\")\n",
+    "            librosa.display.waveshow(y, sr=sr)\n",
+    "        plt.title('Waveform')\n",
+    "        plt.xlabel('Time (s)')\n",
+    "        plt.ylabel('Amplitude')\n",
     "\n",
-    "# 3. STFT plot\n",
-    "plt.subplot(7, 1, 3)  # Changed from 6,1,3 to 7,1,3\n",
-    "S = np.abs(librosa.stft(y))\n",
-    "plt.plot(np.mean(S, axis=1))\n",
-    "plt.title('Short-Time Fourier Transform (STFT) Magnitude')\n",
-    "plt.xlabel('Frequency Bin')\n",
-    "plt.ylabel('Magnitude')\n",
-    "# Mark approximate 12kHz bin\n",
-    "bin_12k = int(12000 * S.shape[0] / (sr/2))\n",
-    "plt.axvline(x=bin_12k, color='r', linestyle='--', label='~12kHz')\n",
-    "plt.legend()\n",
+    "        # 2. FFT plot\n",
+    "        plt.subplot(7, 1, 2)\n",
+    "        fft = np.fft.fft(y)\n",
+    "        freq = np.fft.fftfreq(len(y), 1/sr)\n",
+    "        plt.plot(freq[:len(freq)//2], np.abs(fft)[:len(freq)//2])\n",
+    "        plt.title('FFT')\n",
+    "        plt.xlabel('Frequency (Hz)')\n",
+    "        plt.ylabel('Magnitude')\n",
+    "        plt.axvline(x=12000, color='r', linestyle='--', label='12kHz')\n",
+    "        plt.legend()\n",
     "\n",
-    "# 4. Spectrogram\n",
-    "plt.subplot(7, 1, 4)  # Changed from 6,1,4 to 7,1,4\n",
-    "D = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\n",
-    "librosa.display.specshow(D, sr=sr, x_axis='time', y_axis='hz')\n",
-    "plt.colorbar(format='%+2.0f dB')\n",
-    "plt.title('Spectrogram')\n",
-    "# Mark 12000 Hz\n",
-    "plt.axhline(y=12000, color='r', linestyle='--', label='12kHz')\n",
-    "plt.legend()\n",
+    "        # 3. STFT plot\n",
+    "        plt.subplot(7, 1, 3)\n",
+    "        S = np.abs(librosa.stft(y))\n",
+    "        plt.plot(np.mean(S, axis=1))\n",
+    "        plt.title('Short-Time Fourier Transform (STFT) Magnitude')\n",
+    "        plt.xlabel('Frequency Bin')\n",
+    "        plt.ylabel('Magnitude')\n",
+    "        bin_12k = int(12000 * S.shape[0] / (sr/2))\n",
+    "        plt.axvline(x=bin_12k, color='r', linestyle='--', label='~12kHz')\n",
+    "        plt.legend()\n",
     "\n",
-    "# 5. Spectrogram with imshow (log scale) - limited to 12000 Hz\n",
-    "plt.subplot(7, 1, 5)  # Changed from 6,1,5 to 7,1,5\n",
-    "D = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\n",
-    "# Calculate the index corresponding to 12000 Hz\n",
-    "max_bin = int(12000 * D.shape[0] / (sr/2))\n",
-    "# Only show frequencies up to 12000 Hz\n",
-    "plt.imshow(D[:max_bin], aspect='auto', origin='lower', \n",
-    "           extent=[0, librosa.get_duration(y=y, sr=sr), 0, 12000], \n",
-    "           cmap='viridis')\n",
-    "plt.ylim(0, 12000)  # Explicitly set y-axis limits to 0-12000 Hz\n",
-    "plt.colorbar(format='%+2.0f dB')\n",
-    "plt.title('Spectrogram (0-12kHz)')\n",
-    "plt.xlabel('Time (s)')\n",
-    "plt.ylabel('Frequency (Hz)')\n",
-    "# Mark 12000 Hz\n",
-    "plt.axhline(y=12000, color='r', linestyle='--', label='12kHz')\n",
-    "plt.legend()\n",
+    "        # 4. Spectrogram\n",
+    "        plt.subplot(7, 1, 4)\n",
+    "        D = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\n",
+    "        with warnings.catch_warnings():\n",
+    "            warnings.simplefilter(\"ignore\")\n",
+    "            librosa.display.specshow(D, sr=sr, x_axis='time', y_axis='hz')\n",
+    "        plt.colorbar(format='%+2.0f dB')\n",
+    "        plt.title('Spectrogram')\n",
+    "        plt.axhline(y=12000, color='r', linestyle='--', label='12kHz')\n",
+    "        plt.legend()\n",
     "\n",
-    "# 6. Spectrogram with linear scale - limited to 12000 Hz\n",
-    "plt.subplot(7, 1, 6)  # Changed from 6,1,6 to 7,1,6\n",
-    "S_linear = np.abs(librosa.stft(y))\n",
-    "# Calculate the index corresponding to 12000 Hz\n",
-    "max_bin_linear = int(12000 * S_linear.shape[0] / (sr/2))\n",
-    "# Only show frequencies up to 12000 Hz with linear scale (no dB conversion)\n",
-    "plt.imshow(S_linear[:max_bin_linear], aspect='auto', origin='lower', \n",
-    "           extent=[0, librosa.get_duration(y=y, sr=sr), 0, 12000], \n",
-    "           cmap='viridis')\n",
-    "plt.ylim(0, 12000)  # Explicitly set y-axis limits to 0-12000 Hz\n",
-    "plt.colorbar()\n",
-    "plt.title('Linear Scale Spectrogram (0-12kHz)')\n",
-    "plt.xlabel('Time (s)')\n",
-    "plt.ylabel('Frequency (Hz)')\n",
-    "# Mark 12000 Hz\n",
-    "plt.axhline(y=12000, color='r', linestyle='--', label='12kHz')\n",
-    "plt.legend()\n",
+    "        # 5. Spectrogram with imshow (log scale) - limited to 12000 Hz\n",
+    "        plt.subplot(7, 1, 5)\n",
+    "        D = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\n",
+    "        max_bin = int(12000 * D.shape[0] / (sr/2))\n",
+    "        plt.imshow(D[:max_bin], aspect='auto', origin='lower', \n",
+    "                  extent=[0, librosa.get_duration(y=y, sr=sr), 0, 12000], \n",
+    "                  cmap='viridis')\n",
+    "        plt.ylim(0, 12000)\n",
+    "        plt.colorbar(format='%+2.0f dB')\n",
+    "        plt.title('Spectrogram (0-12kHz)')\n",
+    "        plt.xlabel('Time (s)')\n",
+    "        plt.ylabel('Frequency (Hz)')\n",
+    "        plt.axhline(y=12000, color='r', linestyle='--', label='12kHz')\n",
+    "        plt.legend()\n",
     "\n",
-    "# 7. Spectrogram showing only 0-100 Hz range\n",
-    "plt.subplot(7, 1, 7)\n",
-    "D_low = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\n",
-    "# Calculate the index corresponding to 100 Hz\n",
-    "max_bin_100hz = int(200 * D_low.shape[0] / (sr/2))\n",
-    "# Only show frequencies up to 100 Hz\n",
-    "plt.imshow(D_low[:max_bin_100hz], aspect='auto', origin='lower', \n",
-    "           extent=[0, librosa.get_duration(y=y, sr=sr), 0, 200], \n",
-    "           cmap='viridis')\n",
-    "plt.ylim(0, 200)  # Explicitly set y-axis limits to 0-100 Hz\n",
-    "plt.colorbar(format='%+2.0f dB')\n",
-    "plt.title('Spectrogram (0-200Hz)')\n",
-    "plt.xlabel('Time (s)')\n",
-    "plt.ylabel('Frequency (Hz)')\n",
-    "# Mark 50 Hz as a reference\n",
-    "plt.axhline(y=50, color='r', linestyle='--', label='50Hz')\n",
-    "plt.legend()\n",
+    "        # 6. Spectrogram with linear scale - limited to 12000 Hz\n",
+    "        plt.subplot(7, 1, 6)\n",
+    "        S_linear = np.abs(librosa.stft(y))\n",
+    "        max_bin_linear = int(12000 * S_linear.shape[0] / (sr/2))\n",
+    "        plt.imshow(S_linear[:max_bin_linear], aspect='auto', origin='lower', \n",
+    "                  extent=[0, librosa.get_duration(y=y, sr=sr), 0, 12000], \n",
+    "                  cmap='viridis')\n",
+    "        plt.ylim(0, 12000)\n",
+    "        plt.colorbar()\n",
+    "        plt.title('Linear Scale Spectrogram (0-12kHz)')\n",
+    "        plt.xlabel('Time (s)')\n",
+    "        plt.ylabel('Frequency (Hz)')\n",
+    "        plt.axhline(y=12000, color='r', linestyle='--', label='12kHz')\n",
+    "        plt.legend()\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "        # 7. Spectrogram showing only 0-200 Hz range\n",
+    "        plt.subplot(7, 1, 7)\n",
+    "        D_low = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\n",
+    "        max_bin_100hz = int(200 * D_low.shape[0] / (sr/2))\n",
+    "        plt.imshow(D_low[:max_bin_100hz], aspect='auto', origin='lower', \n",
+    "                  extent=[0, librosa.get_duration(y=y, sr=sr), 0, 200], \n",
+    "                  cmap='viridis')\n",
+    "        plt.ylim(0, 200)\n",
+    "        plt.colorbar(format='%+2.0f dB')\n",
+    "        plt.title('Spectrogram (0-200Hz)')\n",
+    "        plt.xlabel('Time (s)')\n",
+    "        plt.ylabel('Frequency (Hz)')\n",
+    "        plt.axhline(y=50, color='r', linestyle='--', label='50Hz')\n",
+    "        plt.legend()\n",
+    "\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing audio file: {str(e)}\")\n",
+    "        print(\"\\nTroubleshooting steps:\")\n",
+    "        print(\"1. Make sure you have all required packages installed:\")\n",
+    "        print(\"   pip install librosa audioread ffmpeg-python\")\n",
+    "        print(\"2. Make sure ffmpeg is installed:\")\n",
+    "        print(\"   - Using conda: conda install ffmpeg\")\n",
+    "        print(\"   - Or download from: https://www.gyan.dev/ffmpeg/builds/\")\n",
+    "        print(\"3. Verify the audio file exists and is not corrupted\")\n",
+    "        print(f\"4. Current working directory: {os.getcwd()}\")\n",
+    "        print(f\"5. Full file path being used: {os.path.abspath(audio_path)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace this with your audio file path\n",
+    "audio_path = \"Live Oaks at the Branch.m4a\"\n",
+    "\n",
+    "# Check if file exists\n",
+    "if not os.path.exists(audio_path):\n",
+    "    print(f\"Error: File '{audio_path}' not found!\")\n",
+    "    print(f\"Current working directory: {os.getcwd()}\")\n",
+    "\n",
+    "\n",
+    "print(\"Starting audio analysis...\")\n",
+    "analyze_audio(audio_path)"
    ]
   }
  ],
